fixed the pie chart on mobile

--- a/src/styles/ManageCategories.css
+++ b/src/styles/ManageCategories.css
@@ -107,3 +107,10 @@
   padding: 0px 40px;
 }
 
+@media (max-width: 600px){
+  .card p{
+    font-size: 12px;
+    max-width: 30px;
+    margin: 0;
+  }
+}
