--- a/src/styles/category.css
+++ b/src/styles/category.css
@@ -45,7 +45,7 @@
 .category-left-text-manage{
   position: absolute;
   font-size: 12px !important;
-  bottom: -7px;
+  bottom: -9px;
   right: 0;
 }
 
